# ml-pipeline-engine

./: .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py  sonar-project.properties  tox.ini
.github/ISSUE_TEMPLATE/: 1_bug.yml  2_feature_request.yml
.github/workflows/: lint.yml  lint_with_ruff.yml  python-publish.yml  tests.yml
docs/: usage_examples.md
docs/examples/: artifact_store_example.py  gereneric_node_example.py  retry_example.py  switch_example.py
ml_pipeline_engine/: __init__.py  cache.py  chart.py  cli.py  const.py  decorators.py  events.py  exceptions.py  logs.py  module_loading.py  types.py
ml_pipeline_engine/artifact_store/: enums.py  errors.py  serializers.py
ml_pipeline_engine/artifact_store/store/: base.py  filesystem.py  no_op.py
ml_pipeline_engine/base_nodes/: datasources.py  feature.py  ml_model.py  processors.py  vectorizer.py
ml_pipeline_engine/context/: dag.py
ml_pipeline_engine/dag/: __init__.py  dag.py  enums.py  errors.py  graph.py  manager.py  retrying.py  storage.py  utils.py
ml_pipeline_engine/dag_builders/annotation/: builder.py  errors.py  marks.py
ml_pipeline_engine/node/: __init__.py  base_nodes.py  enums.py  errors.py  node.py  retrying.py  serialization.py
ml_pipeline_engine/parallelism/: __init__.py  basic.py  processes.py  threads.py
ml_pipeline_engine/visualization/: dag.py  sample.py  schema.py  utils.py
ml_pipeline_engine/visualization/viewer/: asset-manifest.json  index.html
ml_pipeline_engine/visualization/viewer/static/js/: 453.ae999f12.chunk.js.map  main.4827d1c7.js.map  main.9d9cf297.js  main.9d9cf297.js.map
ml_pipeline_viewer/: .gitignore  cli.py  package-lock.json  package.json
ml_pipeline_viewer/public/: index.html
ml_pipeline_viewer/src/: App.tsx  constants.ts  enums.ts  index.css  index.tsx  store.ts  theme.ts  types.d.ts
ml_pipeline_viewer/src/components/: copy-area.tsx  details-drawer.tsx  diagram.tsx  node.tsx
ml_pipeline_viewer/src/components/panels/: control-panel.tsx  zoom-panel.tsx
ml_pipeline_viewer/src/hooks/: diagram.ts
ml_pipeline_viewer/src/utils/: clipboard.ts  dagreGraph.ts  diagram.ts  graph-data.ts  search.ts  source-code.ts
ml_pipeline_viewer/visualization/: dag.py  schema.py
ml_pipeline_viewer/visualization/viewer/: asset-manifest.json  index.html  manifest.json
ml_pipeline_viewer/visualization/viewer/static/css/: main.fdcc84c5.css  main.fdcc84c5.css.map
ml_pipeline_viewer/visualization/viewer/static/js/: 453.ae999f12.chunk.js  main.4827d1c7.js
tests/: conftest.py  helpers.py  test_cache.py  test_module_loading.py  test_utils.py
tests/artifact_store/: test_serializers.py
tests/artifact_store/store/: test_filesystem.py  test_save_in_input_one_of_with_recurrent.py  test_save_in_recurrent.py  test_skip_tag.py
tests/dag/: test_dag_chain.py  test_dag_rhombus.py  test_dag_single.py  test_demo_ml_model_dag.py  test_reusable_nodes.py
tests/dag/oneof/: test_fail_node.py  test_input_one_of_fails_dag.py  test_input_one_of_first_success_dag.py  test_input_one_of_last_success_dag.py  test_input_one_of_multiple_dag.py  test_nested_input_one_first_level_failure.py  test_nested_input_one_first_level_success.py  test_nested_input_one_only_necessary_branches.py  test_nested_input_one_second_level_failure.py  test_nested_input_one_second_level_success.py  test_oneof_all_errors.py  test_oneof_fail_node.py  test_oneof_many_recurrent_subgraph.py  test_oneof_node_success.py  test_oneof_recurrent_same_ancestors.py  test_oneof_recurrent_with_reduce.py  test_oneof_subgraph_with_single_node.py  test_oneof_with_recurrent_subgraph.py  test_oneof_with_second_level_fallback_nested_oneof_success_dag.py  test_oneof_with_second_level_nested_oneof_cancel_oneof_branch.py  test_oneof_with_second_level_nested_oneof_success_dag.py  test_oneof_with_third_level_nested_oneof_success_dag.py
tests/dag/recurrent_subgraph/: test_inline_subgraph.py  test_nested_subgraph.py  test_simple_subgraph.py  test_subgraph_default.py  test_subgraph_default_retry.py  test_subgraph_with_error.py  test_subgraph_with_inside_switch.py  test_subgraph_with_several_calls.py
tests/dag/retry/: conftest.py  test_dag_retry.py  test_dag_retry__base_error.py  test_dag_retry__error.py
tests/dag/switch_case/: test_concurrent_switch.py  test_dag_multiple_switch_case.py  test_dag_nested_switch_case.py  test_dag_switch_case.py
tests/tags/: test_tags.py
tests/test_chart/: test_dag.py
tests/test_events/: test_dag.py
tests/visualization/: test_visualization.py
