[tool.poetry]
name = "ml-pipeline-engine"
readme = "README.md"
version = "1.6.0"
authors = [
  "Konyaev Matvey",
  "Vasiliy Pankov",
]
repository = "https://github.com/tochka-public/ml-pipeline-engine"
homepage = "https://github.com/tochka-public/ml-pipeline-engine"
description = "Фреймворк для работы с пайплайном ML моделей"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
networkx = ">=3.1,<4.0"
python-ulid = ">=1.1.0,<2.0"
importlib-resources = "^6.4.0"
cachetools = "^5.3.3"
click = "^8.1.7"

[tool.poetry.scripts]
ml_pipeline_engine = "ml_pipeline_engine.cli:main"

[tool.poetry.dev-dependencies]
pytest = ">=4.0.0"
pytest-mock = ">=3.10.0"
pre-commit = ">=2.0.0"
flake8 = ">=3.8.3"
pytest-cov = ">=2.11.0"
pytest-asyncio = ">=0.18.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-s -vv"

[build-system]
requires = ["setuptools >= 69.0"]  # nice
build-backend = "setuptools.build_meta"
